# Nocturne

./: README.md  com.jeffser.Nocturne.yml  meson.build
data/: com.jeffser.Nocturne.SearchProvider.desktop.in  com.jeffser.Nocturne.SearchProvider.service.in  com.jeffser.Nocturne.gschema.xml  com.jeffser.Nocturne.metainfo.xml.in  com.jeffser.Nocturne.search-provider.ini  meson.build
po/: POTFILES.in  ca.po  es.po  eu.po  hr.po  nocturne.pot  pt_BR.po  zh_CN.po
src/: actions.py  constants.py  main.py  meson.build  nocturne_search_provider.py.in  preferences.py  style.css  window.py
src/integrations/: __init__.py  base.py  jellyfin.py  local.py  models.py  navidrome.py
src/ui/: preferences.blp  window.blp
src/ui/album/: button.blp
src/ui/containers/: carousel.blp
src/ui/pages/: login.blp
src/ui/playing/: control_page.blp  cover_art.blp  lyrics_page.blp  popout_window.blp  queue_page.blp
src/ui/playlist/: dialog.blp
src/ui/song/: queue.blp
src/widgets/: __init__.py
src/widgets/album/: button.py  page.py
src/widgets/artist/: page.py
src/widgets/containers/: context.py
src/widgets/lyrics/: __init__.py  dialog.py  helpers.py
src/widgets/pages/: albums.py  albums_all.py  home.py  login.py  setup.py  welcome.py
src/widgets/playing/: control_page.py  cover_art.py  footer.py  lyrics_page.py  player.py  popout_window.py  queue_page.py
src/widgets/playlist/: page.py  selector_row.py
src/widgets/song/: button.py  details_dialog.py  queue.py  row.py  small_row.py
